SERVER-27200 fix CodeWScope comparison to not use collator